[metadata]
name = rl
version = 0.0.1
author = Brian Elinsky
description = My reinforcement learning practice.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.8

[options.packages.find]
where = src